src/objects/Call_Log_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Attended_Snap__c</fullName>
        <label># Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Snap__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Log_Number_Snap__c</fullName>
        <label>Call Log Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Snap__c</fullName>
        <formula>IF(Status_Snap__c=&quot;Completed&quot;, TRUE, FALSE)</formula>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Snap__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Snap__c</fullName>
        <label>Owner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants_Snap__c</fullName>
        <label># Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Field_Participant_Snap__c</fullName>
        <label>Primary Field Participant</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Snap__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Snap__c</fullName>
        <label>Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Snap__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Call Log Snapshot</label>
    <nameField>
        <displayFormat>CL-{000000000}</displayFormat>
        <label>Call Log Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Log Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>